--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,6 +14,7 @@ phases:
 #      - echo Creating dist folder for copying all the angular code as well as dependencies
       - mkdir dist
       - tar -xvf angularCodeDependencies.tar -C dist
+      - echo CODEBUILD_SRC_DIR - $CODEBUILD_SRC_DIR
 artifacts:
   files:
       - dist/**/*
