--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,8 +10,10 @@ phases:
   pre_build:
     commands:
 #      - tar -cvf angularCodeDependencies.tar $CODEBUILD_SRC_DIR
+#  Base Directory location for Angular FrontEnd Build: /codebuild/output/<srcxxxxxxxxx>/src/<github.com>/<Github-AccountName>/<Repo-Name>
+#  All the Angullar Dependencies will be downloaded in the Base Directory folder. The tar command archives all the files and directories
       - tar -cvf angularCodeDependencies.tar .
-#      - echo Creating dist folder for copying all the angular code as well as dependencies
+#     - echo Creating dist folder for copying all the angular code as well as dependencies
       - mkdir dist
       - tar -xvf angularCodeDependencies.tar -C dist
       - echo CODEBUILD_SRC_DIR - $CODEBUILD_SRC_DIR
